--- a/Google_Colaboratory_Basics.ipynb
+++ b/Google_Colaboratory_Basics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP5B5HlcXqtpYi8Z2wWKDfs",
+      "authorship_tag": "ABX9TyPar4AjppvzQIYpXbc+Ty0z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -502,19 +502,93 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Numpy Arrays"
+      ],
       "metadata": {
-        "id": "Pea9pX7N1joz"
+        "id": "IqI7a9WH6mBM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#list\n",
+        "\n",
+        "list1= [ 1,2,3,4,5]\n",
+        "print(list1)\n",
+        "type(list1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Pea9pX7N1joz",
+        "outputId": "9a5dc614-a09b-448e-c2a7-2454c3156aeb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Numpy_Array\n",
+        "\n",
+        "np_array = np.array([1,2,3,4,5])\n",
+        "print(np_array)\n",
+        "type(np_array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MHPp0AUM5Y6s",
+        "outputId": "a7fe044c-e872-4357-f9e8-f3452ca0d81e"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4 5]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "MHPp0AUM5Y6s"
+        "id": "DEb7WZ-77g-e"
       },
       "execution_count": null,
       "outputs": []
